tests/scan/fixtures/validation/negative/clean_rubygems_clean_queue_gem/clean_queue_gem.gemspec
Gem::Specification.new do |s|
  s.name = "clean_queue_gem"
  s.version = "0.1.0"
  s.summary = "A clean Ruby gem: clean_queue_gem"
  s.authors = ["Example Author"]
end
